# accounts/openapi.gen.go
@@ -1,7 +1,7 @@
-// Package openapi provides primitives to interact with the openapi HTTP API.
+// Package accounts provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
-package openapi
+package accounts
 
 import (
 	"context"
@@ -99,22 +99,22 @@ type TransferJSONRequestBody TransferJSONBody
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
-	// (POST /accounts/register)
+	// (POST /)
 	Register(w http.ResponseWriter, r *http.Request)
 
-	// (GET /accounts/{id}/balance)
+	// (GET /{id}/balance)
 	Balance(w http.ResponseWriter, r *http.Request, id AccountId)
 
-	// (POST /accounts/{id}/mint)
+	// (POST /{id}/mint)
 	Mint(w http.ResponseWriter, r *http.Request, id AccountId)
 
-	// (POST /accounts/{id}/spend)
+	// (POST /{id}/spend)
 	Spend(w http.ResponseWriter, r *http.Request, id AccountId)
 
-	// (GET /accounts/{id}/transactions)
+	// (GET /{id}/transactions)
 	Transactions(w http.ResponseWriter, r *http.Request, id AccountId)
 
-	// (POST /accounts/{id}/transfer)
+	// (POST /{id}/transfer)
 	Transfer(w http.ResponseWriter, r *http.Request, id AccountId)
 }
 
@@ -386,22 +386,22 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	}
 
 	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/accounts/register", wrapper.Register)
+		r.Post(options.BaseURL+"/", wrapper.Register)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/accounts/{id}/balance", wrapper.Balance)
+		r.Get(options.BaseURL+"/{id}/balance", wrapper.Balance)
 	})
 	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/accounts/{id}/mint", wrapper.Mint)
+		r.Post(options.BaseURL+"/{id}/mint", wrapper.Mint)
 	})
 	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/accounts/{id}/spend", wrapper.Spend)
+		r.Post(options.BaseURL+"/{id}/spend", wrapper.Spend)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/accounts/{id}/transactions", wrapper.Transactions)
+		r.Get(options.BaseURL+"/{id}/transactions", wrapper.Transactions)
 	})
 	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/accounts/{id}/transfer", wrapper.Transfer)
+		r.Post(options.BaseURL+"/{id}/transfer", wrapper.Transfer)
 	})
 
 	return r
@@ -605,22 +605,22 @@ func (response Transfer404Response) VisitTransferResponse(w http.ResponseWriter)
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 
-	// (POST /accounts/register)
+	// (POST /)
 	Register(ctx context.Context, request RegisterRequestObject) (RegisterResponseObject, error)
 
-	// (GET /accounts/{id}/balance)
+	// (GET /{id}/balance)
 	Balance(ctx context.Context, request BalanceRequestObject) (BalanceResponseObject, error)
 
-	// (POST /accounts/{id}/mint)
+	// (POST /{id}/mint)
 	Mint(ctx context.Context, request MintRequestObject) (MintResponseObject, error)
 
-	// (POST /accounts/{id}/spend)
+	// (POST /{id}/spend)
 	Spend(ctx context.Context, request SpendRequestObject) (SpendResponseObject, error)
 
-	// (GET /accounts/{id}/transactions)
+	// (GET /{id}/transactions)
 	Transactions(ctx context.Context, request TransactionsRequestObject) (TransactionsResponseObject, error)
 
-	// (POST /accounts/{id}/transfer)
+	// (POST /{id}/transfer)
 	Transfer(ctx context.Context, request TransferRequestObject) (TransferResponseObject, error)
 }
 
